Fixed text overflow

--- a/src/components/chat.css
+++ b/src/components/chat.css
@@ -32,7 +32,9 @@
   min-height: 80%;
   height: 80%;
   max-height: 80%;
+  max-width: 100%;
   overflow-y: scroll;
+  word-wrap: break-word;
 }
 
 #message-div > div {
